<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnCambiarTexto"
        android:layout_width="194dp"
        android:layout_height="67dp"
        android:text="@string/lblCambiarTexto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEntrada"
        app:layout_constraintVertical_bias="0.402" />

    <Button
        android:id="@+id/btnRedireccionar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblRedireccionar"
        app:layout_constraintBottom_toTopOf="@+id/btnCambiarTexto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEntrada"
        app:layout_constraintVertical_bias="0.601" />

    <EditText
        android:id="@+id/txtEntrada"
        android:layout_width="320dp"
        android:layout_height="44dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/texto"
        android:textColor="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.414" />

    <TextView
        android:id="@+id/txwNum2"
        android:layout_width="320dp"
        android:layout_height="45dp"
        android:text="@string/lbl_num2"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txtEntrada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txwHolaMudno"
        app:layout_constraintVertical_bias="0.43" />

    <TextView
        android:id="@+id/txwHolaMudno"
        android:layout_width="203dp"
        android:layout_height="69dp"
        android:text="@string/hola_mundo"
        android:textAlignment="center"
        android:textColor="#F44336"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.098"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>